--- a/index.css
+++ b/index.css
@@ -13,6 +13,10 @@ body{
 #buttons{
 
 }
+#heading{
+	font-family: "Trebuchet MS", sans-serif;
+	font-size: 14px;
+}
 .myButton {
 	-moz-box-shadow: 0px 0px 0px 2px #9fb4f2;
 	-webkit-box-shadow: 0px 0px 0px 2px #9fb4f2;
