--- a/newGrid.css
+++ b/newGrid.css
@@ -14,6 +14,11 @@
         position: relative;
     }
 
+    #heading{
+      font-family: "Trebuchet MS", sans-serif;
+      font-size: 25px;
+      font-weight: bold;
+    }
 .connecting-line {
     height: 2px;
     background: #e0e0e0;
