test Integration with SOF

--- a/newGrid.css
+++ b/newGrid.css
@@ -2230,3 +2230,10 @@ strong {
   padding: 6px 12px !important;
   border-radius: 4px !important;
 }
+#sofSuite{
+  float: right;
+  margin-right: -22em;
+}
+#sofButtons{
+  
+}
