CSS changes as per the review comments

--- a/newGrid.css
+++ b/newGrid.css
@@ -2234,6 +2234,66 @@ strong {
   float: right;
   margin-right: -22em;
 }
-#sofButtons{
-  
+.tilebig{
+  background: #f7df2d none repeat scroll 0 0;
+  box-sizing: border-box;
+  display: inline-block;
+  margin-bottom: 30px;
+  padding: 2em;
+  width: 184%;
 }
+.tileSelected {
+  height:100px;
+  width:100px;
+  background:black;
+  color:#fff;
+  position: relative;
+}
+
+.tileSelected::before {
+  content: "";
+  width: 28px;
+  height: 28px;
+  top: 0;
+  right: 0;
+  position: absolute;
+  background: url(tick.png);
+}
+.tile.selected {
+  border: 4px #4390df solid;
+}
+.tile.selected:before {
+  position: absolute;
+  display: block;
+  content: "\e003";
+  color: #fff;
+  right: 0;
+  font-family: 'metroSysIcons';
+  font-size: 9pt;
+  font-weight: normal;
+  z-index: 102;
+  top: 0;
+}
+.btn-primary.active, .btn-primary:active, .open > .dropdown-toggle.btn-primary {
+  background-color: #ccc !important;
+  border-color:#ccc !important;
+  border-top: 0.5em solid #4390df !important;
+  border-left: 0.5em solid  #4390df  !important;
+  display: block;  
+  right: 0;
+  content: "";
+  top: 0;
+  z-index: 101;  
+  font-family: 'metroSysIcons';
+  content: "\e003";
+  color: black !important;
+  }
+  #titleCss{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+    margin-left: 7.5em;
+  }
+  .apphealth{
+    margin-left: 10em;
+  }
+ 
